projects/netEaseEdu/mystyle.css
<style type="text/css">
	body{margin:0px;		
		font-family:Microsoft YaHei;font-size:16px;
		background-color:blue;}

	.nav{width:100%;height:125px;background-color:white;}

	.nav-top{width:100%;height:36px;background-color:#f8f8f8;
		margin:0;}
	.nav-top-content{width:1205px;margin:auto;height:100%}
	.info{float:left;font-family:Microsoft YaHei;height:12px;font-size:12px;font-color:white;margin-top:12px}
	.info-link{margin-left:10px;font-color:green;}
  
    .shutinfo{float: right;position:relative;}
    .shutinfopic{
    	position: absolute;
    	left:-15px;top:-10px;
    	margin-right:5px;margin:top:14px;
    	width:12px;height:12px;
    	background:transparent url(img/icon/icon.png) no-repeat;
    	background-position: -58px -38px;
    }
	.navmain{display:block;width:1205px;height:96px; margin:auto; }

	.logo{float:left;
		font-family:Microsoft YaHei;font-weight:bolder;font-size:30px;color:#39a030;
		vertical-align: middle;
		height:35px;width:70px;margin-top:27px;}
	.logosub{font-size:28px;margin-top: 25px;width:15px;}

	.logotext{float:left;
		font-family:Microsoft YaHei;font-size:28px;color:#333333;
		vertical-align:left;
		height:35px;margin-top:26px;}

	.category{text-align:center;float:right;height:20px;width:700px;margin-top:38px;}

	.category li{float:right;display: inline-block;
		width:117px;margin-right:10px;
		font-family:Microsoft YaHei;font-weight:lighter;font-size:16px;color:#66666;
		vertical-align: middle;}
		.big{width:150px;}
	.category li a:hover{color:#39a030;}

	.query{width:20px;height:22px;
		background:transparent url(img/icon/icon.png) no-repeat;
        background-position: 0px -40px;
        background-color:white;
    }
    .query:hover{
		background:transparent url(img/icon/icon.png) no-repeat;
        background-position: -30px -40px;
    }

	/* 多点式幻灯指示控制器-默认底部居中 */
	.u-pointer{position:absolute;bottom:10px;left:0;right:0;z-index:50;text-align:center;line-height:0;}
	.u-pointer i{display:inline-block;width:10px;height:10px;margin:0 0 0 5px;border-radius:50%;box-shadow:inset 0 1px 0 rgba(0,0,0,0.5);cursor:pointer;background:#ccc;}
	.u-pointer i:first-child{margin-left:0;}
	.u-pointer i:hover{background:#999;}
	.u-pointer i.z-crt{background:#40a1d9;}

	/* 单片式幻灯-默认淡入淡出  */
	.m-banner{position:relative;width:1600px;height:460px;overflow:hidden;display:inline-block;}
	.m-banner ol,.m-banner li{position:absolute;top:0;left:0;width:100%;height:100%;z-index:20;}
	.m-banner li{opacity:0;-webkit-transition:0.5s ease-out;-moz-transition:0.5s ease-out;-ms-transition:0.5s ease-out;transition:0.5s ease-out;-webkit-transition-property:opacity,left,top;-moz-transition-property:opacity,left,top;-ms-transition-property:opacity,left,top;transition-property:opacity,left,top;}
	.m-banner li.z-crt{z-index:21;opacity:1;}

	/*三个产品介绍	*/
	.threeproducts{position:relative;margin:auto;width:1205px;height:297px;background-color:white}
	.product{display:inline-block;width:396px;height:297px;margin:0px;}
	.producticon{float:left;border:0px;margin-top:0px;margin-left:0;display:inline-block;
		height:297px;width:107px;background-color:white;}
    .productintro{float:left;display:inline-block;height:100%;width:281px;background-color:white;margin-left:0px;}

    .productintrocontent{
    	margin-top: 61px;height:100%px;width:238px;margin-left: 8px;
    	font-family:Microsoft YaHei;;font-weight:lighter;font-size:14px;
    	font-color:white;
    	line-height:30px;
    }

    .productintrocontent h1{line-height: 2.5;}
    .pcmore a{color:#39a030;}

    .producticonimg1,.producticonimg2,.producticonimg3{
    	border:0px;
		margin-top:67px;margin-left:0px;
    	width:80px;height:80px;
        background:transparent url(img/icon/icon.png) no-repeat;
    }
	.producticonimg1{background-position: 0px -160px;}
    .producticonimg2{background-position: 0px -280px;}
    .producticonimg3{background-position: 0px -400px;}
/*环境展示页*/
	.env{width:100%;height:225px;
		display:-webkit-flex;flex-direction:row;flex-wrap:nowrap;}
	.env img{width:316px;height:225px;display:block;margin-right:1.5px;}
/*课程内容页*/
	.content{margin:auto;width:1205px;height: 1551px;}
	.class{float:left;}
	.tabcontainer{
			height:50px;width:100%;left:0px;margin-top:81px;
			margin-bottom:30px;}

	.tab{display:inline-block;margin:0;
		box-shadow:gray 3px 3px 10px;
		font-family:Microsoft YaHei;font-size:16px;
		text-align: center;
		vertical-align: middle;
	}

	.tab1{height:50px;width:200px;background-color:#39a030;line-height:50px;color:white;}
	.tab2{height:50px;width:200px;background-color:white;line-height:50px;color:#666666;}

	.card{margin-top:30px;width:960px;height:1218px;
		display:-webkit-flex;
		flex-direction:row;flex-wrap:wrap;justify-content:space-between}

	.cardcontent{box-shadow: #666 0px 0px 2px;align-items:end;position: relative;
		width:225px;height:227px;background-color:white;margin:0;}


	.cardcontenthover{position:absolute;top:0px;left:0px;z-index:999;width:500px;height:300px;
	}

	.cardcontent1{margin-top: 0px;margin-left: 0px;}
	.cardcontent20{margin-right:0px;margin-bottom: 0px}
	li{list-style: none;}
	.cardcontent img{height:124px;width:223px;margin-left:1px;margin-right:1px;}


	.numcontainer{height:30px;width:100%;margin-top:31px;}
	.num{float:right;height:30px;width:302px;
		background-color: #9dd8b1;line-height:30px;}
	.num li{width:26px;display:inline-block;margin:auto;text-align:right}

	

	.textintro1{margin-top:5px;}
	.intro{text-align:center;}
	.intro p{text-align:center;vertical-align:middle;
		font-family:Microsoft YaHei;
	}
	.textintro p{font-weight:bold;font-size:16px;}
	.videointro p{font-size:14px;}
	.intro .textintro{font:20px/1.5 'Microsoft YaHei';
	width:100%;height:55px;box-shadow:0px 1px 0px 1px #ddd;}

    .side .intro{box-shadow:0x 1px 0px 1px #ddd;}

    .videointro p{font:16px/1.2 'Microsoft YaHei';vertical-align: middle;}
    .videointro img{margin:auto;}



/*边栏，视频及热点排行*/
	.side{float:right;width:223px;height:1028px;margin-top:81px;border:1px solid #eee;box-shadow: #ecebeb 1px 1px 1px;}
	.side .sort{height:57px;width:224px;background-color:white;
		border-bottom:1px solid #dddddd;}
	#hotsort span{
		height:15px;width:150px;
		font-family:Microsoft YaHei;font-size:17px;margin-left:20px;
		font-color:#333333;
	}
	

	.hotcontentcard{
		position:relative;
		height:50px;width:183px;display:inline-block;margin-left:16px;margin-top:19px;}
	.hotcontentcard div{width:124px;height:50px;float:right;}
	.hotcontentcard img{float:left;}
	.hotcontentcard p{overflow:hidden;white-space:nowrap;text-overflow:ellipsis;font-size:14px;font-color:gray;font-family:Microsoft YaHei}

	.hotcontentcard span{position:absolute; top:30px;left:65px;}
	.foot{
		display:inline-block;
		width:100%;height:262px;
		background-color: #2c3339;}

	.footcontent{
		margin:auto;
		width:1205px;height:100%;}
	.footerleft{
		font-family:Microsoft YaHei;font-size:12px;font-color:white;
		margin-top:70px;
		float:left;
		width:400px;margin-left:48px;
		line-height:2;
	}
	.connect{float: right;margin-left:70px;}

	.footerright{
		margin-top:82px;
		font-family:Microsoft YaHei;font-size:12px;font-color:white;
		float:right;margin-right:200px;
		line-height:2.2;
	}

	.infologo{display:inline-block;
		font-family:Microsoft YaHei;
		font-weight:bolder;font-size:20px;color:#39a030;}

	.infologoEDU{font-size:25px;font-weight:bolder;margin-top:26px;}
	.infologosub{font-size:22px;margin-top: 15px;width:15px;}
	.infologotext{
		font-family:Microsoft YaHei;font-size:20px;color:#39a030;
		vertical-align:left;
		height:35px;margin-top:20px;
	}
	.infotext p{
		font-family:Microsoft YaHei;font-size:10px;color:white;
		line-height: 1.5;
	}
	.connect, .connect a{font-family:Microsoft YaHei;font-size:14px;color:white;}

</style>

